# TaskPilot-AI

./: .gitignore  README.md  fetch_my_jira.py  pyproject.toml  requirements.txt
data/injected/: demo_inject_test.json  p1_emergency.json
data/memory/: preferences.json
data/raw/: calendar.json  jira_board.json  meeting_transcripts.json  my_jira_board.json  outlook_inbox.json  servicenow_defects.json
data/test/: ground_truth_duplicates.json  prioritization_test_data.json
dev4-learnings/: 01_notifier_protocol.md  02_push_notifications.md  03_monitor_integration.md  04_daily_plan_format.md  05_chat_improvements.md  06_monitor_mode.md  README.md
docs/: 0000_problem_statement.md  1000_requirements.md  1100_agent_foundation.md  1100_dev2_day1_architecture.md  1200_ingestion_and_extraction_design.md  2000_team_division.md  DATA_SCHEMA.md  DUPLICATE_TEST_SCENARIOS.md  SOURCE_CONTRACTS.md
docs/dev3/: README.md  deduplicator.md  prioritizer.md
docs/handoff/: DEV2_AGENT_HANDOFF.md  DEV3_ANALYTICS_HANDOFF.md  DEV4_INTERFACE_HANDOFF.md  DEV5_QA_HANDOFF.md
durga-learnings/: 01_agent_foundation.md  02_ingestion_and_extraction.md  03_next_steps.md  04_interface_contracts.md  05_llm_client.md  06_mock_data.md  07_event_monitor.md  08_injection_points.md  09_full_system_walkthrough.md  README.md
src/parsers/: __init__.py  email_parser.py  jira_parser.py  meeting_parser.py  servicenow_parser.py
src/pipeline/: __init__.py  normalizer.py  privacy.py
src/schemas/: __init__.py
tests/: QA_REPORT.md  test_analytics.py  test_graph.py  test_notifications.py  test_pipeline.py
(+29 files in other folders)
