[project]
name = "taskpilot-ai"
version = "0.1.0"
description = "Agentic task intelligence assistant for overloaded engineers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

